refactor: project files 구조 수정, IntimeWidget component 추가

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,18 +10,30 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
+    "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+    },
+    "jsxImportSource": "@emotion/react",
 
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "composite": true,
+    "allowSyntheticDefaultImports": true,
+    "types": ["vite-plugin-svgr/client", "@emotion/react"]
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "src/types/*.ts",
+    "vite.config.ts"
+  ]
 }
