refactor: update IntimeWidget to convert amount to string and adjust tsconfig types

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,7 +29,7 @@
     "noUncheckedSideEffectImports": true,
     "composite": true,
     "allowSyntheticDefaultImports": true,
-    "types": ["vite-plugin-svgr/client", "@emotion/react"]
+    "types": ["@emotion/react"]
   },
   "include": [
     "src",
